thanos/openshift/thanos-frontend-ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thanos-frontend-route
  namespace: monitoring-testing-october20
spec:
  to:
    kind: Service
    name: thanos-query-frontend
  port:
    targetPort: 9095
  tls:
    termination: edge
  host: thanos-frontend.local
