thanos/openshift/thanos-remote-write-ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thanos-receive-route
  namespace: monitoring-testing-october20
spec:
  to:
    kind: Service
    name: thanos-receive
  port:
    targetPort: 10901
  tls:
    termination: edge
  host: thanos-receive.local
